--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Here are the project requirements for your Alpha Insurance Analysis project:
+Here are the project requirements for your **Alpha Insurance Analysis** project:
 
-1. Programming & Environment
-Python (>=3.8)
-Jupyter Notebook / Google Colab / Local Python Environment
-Virtual Environment (optional but recommended)
+### **1. Programming & Environment**  
+- Python (>=3.8)  
+- Jupyter Notebook / Google Colab / Local Python Environment  
+- Virtual Environment (optional but recommended)  
